--- a/en/n/nonidentity.774507.wikitext
+++ b/en/n/nonidentity.774507.wikitext
@@ -7,7 +7,7 @@
 
 #[[difference|Difference]], distinction; failure to be [[identical]].
 #*{{quote-book|1993|Ordway Hilton|Scientific Examination of Questioned Documents|url=http://books.google.com/books?id=-exqdS1GIHEC&pg=RA1-PA10|page=395|isbn=0849395100
-|passage=No scientific examiner would select only chance variations to establish '''nonidentity''' of two specimens when the fundamental points of identification stamp them as originating at a single source.}}
+|passage=No scientific examiner would select only chance variations to establish '''nonidentity''' of two specimens when the fundamental points of identification stamp them as originating at a single creator.}}
 # {{mathematics}} An operator which modifies its [[operand]], and which therefore is not the [[identity]].
 #*{{quote-book|1995|Thomas A. Whitelaw|Introduction to Abstract Algebra|url=http://books.google.com/books?id=f2hyf0QoB_0C|isbn=0751401471|page=99|passage=Moreover, in a group of prime order ''p'', every '''non-identity''' element (i.e. every element other than 1) has period ''p''.}}
 
