--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -233,6 +233,7 @@ From {{etyl|la|ca}} {{term|lang=la|simplex}}.
 ===Noun===
 {{fr-noun|m}}
 
+# one-way ticket
 # {{baseball|lang=fr}} [[single#Noun|single]]
 
 ====Related terms====
