--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -227,7 +227,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 ==Middle Chinese==
 
 ===Han character===
-'''月''' (*[[ngiuæt]])<!--asterisk signifies that this character appears more than four times in the Tang Dynasty corpus of literature-->
+'''月''' (*ngiuæt)<!--asterisk signifies that this character appears more than four times in the Tang Dynasty corpus of literature-->
 
 # {{defn|Middle Chinese|sort=月00}}
 
