--- a/en/c/colluvium.803610.wikitext
+++ b/en/c/colluvium.803610.wikitext
@@ -6,7 +6,7 @@
 
 #{{geology}} A loose accumulation of [[rock]] and [[soil]] [[debris]] at the foot of a slope
 ====Translations====
-{{trans-top}}
+{{trans-top|a loose accumulation of rock and soil debris at the foot of a slope}}
 * French: {{t|fr|colluvion|m}}
 * German: {{t|de|Kolluvium}}
 {{trans-mid}}
