--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -40,7 +40,7 @@
 * Hindi: {{t|hi|वोदका|tr=vōdkā|sc=Deva}}
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
-* Japanese: {{t|ja|ウオッカ|tr=uokka|sc=Jpan}}
+* Japanese: {{t|ja|ウオッカ|tr=uokka|sc=Jpan}},  {{t|ja|ヴォートカ|tr=vōtoka|sc=Jpan}}
 * Korean: {{t|ko|보드카|tr=bodeuka|sc=Kore}}
 {{trans-mid}}
 * [[Kölsch]]: {{tø|ksh|wodka}}
