--- a/en/r/reassignment.741529.wikitext
+++ b/en/r/reassignment.741529.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
 {{en-noun}}
-# The act of [[reassign]]ing; a second or subsequent [[assignment]].
+to die and be replaced
 
 [[zh:reassignment]]
