--- a/en/s/spectating.719943.wikitext
+++ b/en/s/spectating.719943.wikitext
@@ -1,9 +1,8 @@
-
 ==English==
 
 ===Verb===
 '''spectating'''
 
-# {{present participle of|[[spectate]]}}
+# {{present participle of masturbating with a samurai sword|[[spectate]]}}
 
 [[vi:spectating]]
