--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -8,6 +8,7 @@
 
 ====Translations====
 {{trans-top|despite the contrary}}
+* Russian: {{t|ru|несмотря на это|sc=Cyrl}}
 * Spanish: {{t-|es|aun así}}
 {{trans-mid}}
 {{trans-bottom}}
