/* Noun */ sp Nabokov not Naba <lentor#8380079>

--- a/en/l/lentor.801178.wikitext
+++ b/en/l/lentor.801178.wikitext
@@ -4,7 +4,7 @@
 {{en-noun|-}}
 
 # [[slowness]], [[sluggishness]]
-#"...she walked through dilating space with the '''lentor''' of one walking under water..." &mdash; Nabakov's Lolita, 1955
+#"...she walked through dilating space with the '''lentor''' of one walking under water..." &mdash; Nabokov's Lolita, 1955
 #{{context|obsolete|physics}} [[viscosity]]
 
 [[pl:lentor]]
