t+pt:[[divisão]] t+sq:[[ndarje]] t+es:[[división]] t+af:[[divisie]] ([[WT:EDIT|Assisted]]) <division#8380303>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -41,7 +41,8 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 ====Translations====
 {{trans-top|act or process of dividing anything}}
-* [[Afrikaans]]: [[verdeling]]
+* [[Afrikaans]]: [[verdeling]],  {{t|af|divisie}}
+* Albanian: {{t|sq|ndarje}}
 * Czech: {{t-|cs|dělení|n}}
 * Dutch: [[deling]] {{f}}; [[verdeling]] {{f}}; [[scheiding]] {{f}}
 * Esperanto: {{t-|eo|divido|xs=Esperanto}}
@@ -54,9 +55,11 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-mid}}
 * Kurdish: {{t+|ku|دابه‌ش|sc=ku-Arab}}
 * Polish: [[podział]] {{m}}
+* Portuguese: {{t|pt|divisão|f}}
 * Romanian: [[diviziune]] {{f}}
 * Russian: {{t+|ru|раздел|m|tr=razdél}}, {{t+|ru|деление|n|tr=delénije}}
 * Slovene: [[deljenje]] {{n}}
+* Spanish: {{t|es|división|f}}
 * Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
 * Swedish: {{t+|sv|division|c}}
 * [[Telugu]]: [[విభజన]]
