t+ms:[[divisi]] t+ko:[[부서]] t+id:[[divisi]] ([[WT:EDIT|Assisted]]) <division#8380344>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -51,9 +51,12 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * German: {{t+|de|Teilung|f}}
 * Greek: {{t|el|διαίρεση|f|tr=δiéresi|sc=Grek}}
 * Hebrew: [[חלוקה]] (khaluqa) {{f}}
+* Indonesian: {{t|id|divisi}}
 * Italian: {{t+|it|divisione|f}}
 {{trans-mid}}
+* Korean: {{t|ko|부서|tr=buseo|sc=Kore}}
 * Kurdish: {{t+|ku|دابه‌ش|sc=ku-Arab}}
+* Malay: {{t|ms|divisi}}
 * Polish: [[podział]] {{m}}
 * Portuguese: {{t|pt|divisão|f}}
 * Romanian: [[diviziune]] {{f}}
