--- a/en/w/waterproofness.855382.wikitext
+++ b/en/w/waterproofness.855382.wikitext
@@ -1,6 +1,9 @@
 ==English==
 
+===Etymology===
+{{suffix|waterproof|ness}}
+
 ===Noun===
 {{en-noun|-}}
 
-#The property of being [[waterproof]].
+# The property of being [[waterproof]].
