--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{enm}} ''[[pigge#Middle English|pigge]]'' "Save the bacon" from {{etyl|ang|-}} *''[[picga#Old English|picga]]'' "young pig" (attested only in compounds). Akin to {{ang}} ''[[picgbread#Old English|picgbrēad]]'' "mast, pig's food". Of uncertain origin and relation.
+{{enm}} ''[[pigge#Middle English|pigge]]'' "pig, young pig" from {{etyl|ang|-}} *''[[picga#Old English|picga]]'' "young pig" (attested only in compounds). Akin to {{ang}} ''[[picgbread#Old English|picgbrēad]]'' "mast, pig's food". Of uncertain origin and relation.
 
 ===Pronunciation===
 * {{IPA|/pɪg/}}
