--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -101,7 +101,7 @@
 * [[Khmer]]: {{t-|km|កោះ|tr=goh|sc=Khmr|xs=Khmer}}
 {{trans-mid}}
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
-* Lao: {{t-|lo|ດອນ|tr=''döön''|sc=Laoo|xs=Lao}}
+* [[Lao]]: {{t-|lo|ດອນ|tr=''döön''|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|sala|f|xs=Lithuanian}}
