--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -105,6 +105,21 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 
 ----
 
+==Esperanto==
+
+===Suffix===
+'''-um'''
+# a suffix without definite meaning, used to form related words
+#: ''[[kruci]]'' - ''[[krucumi]]''
+#:: to cross - to crucify
+#: ''[[malvarmo]]'' - ''[[malvarmumo]]''
+#:: cold (temperature) - cold (disease)
+
+
+[[Category:Esperanto suffixes|um]]
+
+----
+
 ==Turkish==
 
 ===Suffix===
