t+nay:[[tagalang]] ([[WT:EDIT|Assisted]]) <bend#8395938>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -165,6 +165,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * Finnish: {{t+|fi|mutka}}
 * German: {{t+|de|Kurve|f}}
 {{trans-mid}}
+* [[Ngarrindjeri]]: {{tø|nay|tagalang}}
 * Portuguese: {{t+|pt|curva|f}}
 * [[Scottish Gaelic]]: {{t|gd|bogha|f}}
 * Slovene: {{t-|sl|zavoj|m}}
