--- a/en/v/voornaam.4105.wikitext
+++ b/en/v/voornaam.4105.wikitext
@@ -2,6 +2,7 @@
 
 ===Pronunciation===
 *{{audio|Nl-voornaam.ogg|audio}}
+* {{IPA|/vor'nam/}}
 
 ===Noun===
 {{nl-noun|g=m|voornamen|voornaampje}} (Accent on the first syllable)
