--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -77,6 +77,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Finnish: {{t+|fi|osa}}
 * German: {{t+|de|Teil|m}}
 {{trans-mid}}
+* Indonesian: {{t|id|bagian}}
 * Kurdish: {{t-|ku|به‌ش|sc=ku-Arab}}
 * [[Malayalam]]: [[വിഭാഗം]] (vibhaagam)
 * Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
@@ -133,6 +134,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * German: {{t+|de|Abteilung|f}}, {{t+|de|Division|f}}
 * Greek: {{t+|el|μεραρχία|f|tr=merarchia}}
 * Hebrew: [[אוגדה]] (ugda) {{f}}
+* Indonesian: {{t|id|divisi}}
 * Kurdish: {{ku-Arab|[[فرقه‌]]}}
 {{trans-mid}}
 * Polish: [[dywizja]] {{f}}
@@ -150,6 +152,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Czech: {{t-|cs|divize|f}}
 * Dutch: [[afdeling]] {{f}}, [[divisie]] {{f}}, [[eenheid]] {{f}}
 * Greek: {{t|el|διεύθυνση|f|tr=δiefθinsi}}
+* Indonesian: {{t|id|divisi}}
 * Kurdish: {{t-|ku|به‌ش|sc=ku-Arab}}
 * Romanian: [[divizie]] {{f}}
 {{trans-mid}}
@@ -179,6 +182,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-top|law: concept of separate responsibility}}
 * Dutch: [[deelbaarheid]] (van prestasie) {{f}}
 {{trans-mid}}
+* Indonesian: {{t|id|pemekaran}}
 * Swahili: {{t+|sw|ugavi|xs=Swahili}}
 {{trans-bottom}}
 
