--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -44,14 +44,16 @@
 * Armenian: {{t-|hy|կշիռ|tr=kšiṙ}},  {{t|hy|քաշ|tr=k’aš}},  {{t-|hy|ծանրություն|tr=çanrut’yun}}
 * Chinese (Simplified): [[重量]] (zhòng liàng)
 * Dutch: {{t+|nl|gewicht}}
+* Esperanto: {{t|eo|pezo}}
 * Estonian: {{t-|et|kaal}}
 * [[Ewe]]: [[kpekpeme]] {{n}}
 * Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|poids}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n|tr=város}}
-* Hungarian: {{t+|hu|súly}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|súly}}
+* [[Ido]]: {{t|io|pezo}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t-|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t|ja|体重|tr=taijū}}
 * Portuguese: {{t+|pt|peso}}
