t+fil:[[pagdugo]] t+tl:[[pagdugo]] t+fil:[[duguan]] t+tl:[[duguan]] t+tl:[[pagkalat]] t+tl:[[pagtae]] t+fil:[[pagkalat]] t+fil:[[pagtae]] ([[WT:EDIT|Assisted]]) <bleed#8402100>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -44,6 +44,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Danish: {{t-|da|bløde}}
 * Dutch: {{t+|nl|bloeden}}
 * Esperanto: {{t-|eo|sangi|xs=Esperanto}}
+* Filipino: {{tø|fil|pagdugo}}
 * Finnish: [[vuotaa]] [[veri|verta]]
 * French: {{t+|fr|saigner}}
 * Georgian: {{t|ka|სისხლის დენა|tr=sisxlis dena|sc=Geor|xs=Georgian}}
@@ -76,6 +77,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Spanish: {{t-|es|sangrar}}
 * {{trreq|Swahili}}
 * Swedish: {{t+|sv|blöda}}
+* [[Tagalog]]: {{t|tl|pagdugo}}
 * Thai: {{Thai|[[ตกเลือด]]}} (dtòk lêuat)
 * Turkish: [[kanamak]] [-ar]
 * {{trreq|Vietnamese}}
@@ -84,9 +86,11 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 
 {{trans-top|draw blood}}
 * Bulgarian: {{t|bg|проливам кръв}},  {{t|bg|пускам кръв}}
+* Filipino: {{tø|fil|duguan}}
 * Irish: {{t|ga|fuiligh|xs=Irish}}
 {{trans-mid}}
 * Latin: {{t|la|depleo|alt=dēpleō}},  {{t|la|phlebotomo|alt=phlebotomō}}
+* [[Tagalog]]: {{t|tl|duguan}}
 {{trans-bottom}}
 
 {{trans-top|take money from}}
@@ -100,8 +104,10 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 {{trans-bottom}}
 
 {{trans-top|spread and stain}}
+* Filipino: {{tø|fil|pagkalat}},  {{tø|fil|pagtae}}
 * Swedish: {{t+|sv|blöda}}
 {{trans-mid}}
+* [[Tagalog]]: {{t|tl|pagkalat}},  {{t|tl|pagtae}}
 {{trans-bottom}}
 
 {{trans-top|remove air bubbles}}
