--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -1,4 +1,4 @@
-[[Image:ParatutaeIsland.jpg|thumb|right|An island.]]
+[[Image:Island_near_Fiji.jpg|thumb|right|An island.]]
 {{also|Island|Ísland|Island'}}
 ==English==
 {{rank|directly|James|Greek|933|island|special|memory|proved}}
