--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -10,6 +10,9 @@
 * {{rhymes|ɑː(ɹ)tɪn}}
 * {{homophones|martin|Martin}} {{qualifer|in some accents}}
 
+===Etymology===
+{{etyl|enm}} ''martryn'', from {{etyl|xno}} ''martrine'' 'marten fur', from Old Low Franconian *''marþrin'' 'pertaining to the marten' (cf. Old Saxon ''marthrin''), from *''marþr'' (cf. Dutch ''marter''), from {{proto|Germanic}} *''marþuz'' 'wedding; marten' (cf. German ''[[Marder]]'', Old English ''mearþ'' 'shrew', Crimean Gothic ''marzus'' 'wedding'), from {{proto|Indo-European}} *''martus'' 'bride'. More at [[marry]].
+
 ===Noun===
 {{en-noun}}
 
