--- a/en/m/mossback.720205.wikitext
+++ b/en/m/mossback.720205.wikitext
@@ -1,10 +1,22 @@
 ==English==
 
+===Etymology===
+{{compound|moss|back}}
+
 ===Noun===
 {{en-noun}}
 
-# A [[turtle]] that, because of its age, has a growth of [[alga]]e on its back
-# {{context|by extension}} A very [[conservative]] or [[reactionary]] person, especially one with [[old-fashioned]] views
+# A [[turtle]] that, because of its age, has a growth of [[alga]]e on its back.
+# {{context|by extension}} A very [[conservative]] or [[reactionary]] person, especially one with [[old-fashioned]] views.
+
+====Translations====
+{{trans-top|turtle with a growth of algae}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|very conservative or reactionary person}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[vi:mossback]]
 [[zh:mossback]]
