/* Translations */ +ru <adjustment#8428862>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -57,6 +57,11 @@
 * Welsh: {{t|cy|cyweiriad|m|xs=Welsh}}
 {{trans-bottom}}
 
+{{trans-top|(psychology) The behavioural process of balancing conflicting needs, or needs against obstacles in the environment}}
+* Russian: {{t|ru|адаптация|f}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[Category:1000 English basic words]]
 
 [[ar:adjustment]]
