/* Translations */ <better late than never#8437222>

--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -12,7 +12,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 #*: ''Their insolence and recklessness must be opposed, and '''better late than never'''.''
 
 ====Translations====
-{{trans-top|it’s better do do something late, than to never do it at all}}
+{{trans-top|it’s better to do something late, than to never do it at all}}
 * Albanian: {{t|sq|më mirë vonë se kurrë|xs=Albanian}}
 * Arabic: {{t|ar|أن يأتي متأخرا خير من أن لا يأتي أبدا|alt=أن يأتي متأخرًا خير من أن لا يأتي أبدًا}}
 * [[Basque]]: {{t|eu|hobe da berandu sekula baino|xs=Basque}}
