--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -8,7 +8,7 @@
 ===Noun===
 {{en-noun}}
 
-# A person who steals, lies, cheats or does other dishonest or illegal things; a criminal.
+# A person who steals, lies, cheats or does other dishonest or illegal things for some kind of profit; a [[convict]].
 #* '''1973''' (November 17), President [[w:Richard Nixon|Richard Nixon]]
 #*: ''People have got to know whether or not their President is a '''crook'''. Well, I'm not a '''crook'''. I've earned everything I've got.''<ref>[http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm Nixon Tells Editors, 'I'm Not a Crook'], November 18, 1973 (The Washington Post)</ref>
 # A [[shepard's crook]]; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
