--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -3,7 +3,7 @@
 [[Image:Bamboo DSCN2465.jpg|thumb|right|Bamboo.]]
 
 ===Etymology===
-From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|lang=pt}}, from {{etyl|ms|en}} {{term|samambu|lang=ms}}, from {{etyl|kn|en}} {{term|bambu|lang=kn}} (ಬಿದಿರು).
+From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|lang=pt}}, from {{etyl|ms|en}} {{term|samambu|lang=ms}}, from {{etyl|kn|en}} {{term|ಬಿದಿರು|tr=bambu|lang=kn}}.
 
 ===Pronunciation===
 * {{audio|en-us-bamboo.ogg|Audio (US)}}
