--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -42,7 +42,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 {{trans-mid}}
 * Italian: {{t-|it|bambù|m}}
 * Japanese: [[竹]] (たけ, take)
-* Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo|xs=Lao}}
+* [[Lao]]: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo|xs=Lao}}
 * Latin: {{t|la|harundo Indica|f|alt=harundō Indica}}
 * [[Macedonian]]: {{t-|mk|бамбус|m|tr=bámbus}}
 * Malay: [[pokok]] [[buluh]]
