--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 {{en-noun|sg=[[terrestrial]] [[planet]]}}
 
-# {{planet}} Any planet of the [[solar system]] or any [[exoplanet]] which is "[[Earth]][[-like]]" in the sense that it is composed primarily of [[metal]]s and [[rock]], in contrast to a planet which is a [[gas giant]].
+# Any planet of the [[solar system]] or any [[exoplanet]] which is "[[Earth]][[-like]]" in the sense that it is composed primarily of [[metal]]s and [[rock]], in contrast to a planet which is a [[gas giant]].
 
 ====Synonyms====
 * [[rocky planet]]
@@ -13,3 +13,5 @@
 
 ====Translations====
 * Dutch: [[aardse planeet]]
+
+[[Category:Planets]]
