--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -31,7 +31,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * {{trreq|Hebrew}}
 * Hungarian: {{t+|hu|jobb későn, mint soha}}
 * Italian: {{t|it|meglio tardi che mai}}
-* Japanese: {{t|ja|良いことよりも遅く|tr=よいことよりもおそく, yoi koto-yori-mo osoku|sc=Jpan}}
+* Japanese: {{t|ja|良いことよりも遅く|tr=よいことよりもおそく, yoi koto-yori-mo osoku|sc=Jpan}},  {{t|ja|遅くてもやらないよりまし|tr=おそくてもやらないよりまし, osokutemo yaranai yori mashi|sc=Jpan}}
 * Latin: {{t|la|potiusque sero quam nunquam}}
 * Norwegian: {{t|no|bedre sent enn aldri}}, {{t|no|bedre seint enn aldri}}
 * Polish: {{t|pl|lepiej późno niż wcale}}
