--- a/en/g/good Lord.741512.wikitext
+++ b/en/g/good Lord.741512.wikitext
@@ -5,6 +5,14 @@
 
 # An exclamation of [[amazement]].
 
+====Translations====
+{{trans-top|exclamation of amazement}}
+* Chinese:
+*: Mandarin: {{t|zh|天哪|tr=tiān'na|sc=Hani}}
+{{trans-mid}}
+* {{trreq|Finnish}}
+{{trans-bottom}}
+
 ====Synonyms====
 See [[Wikisaurus:wow]]
 
