header Synonyms to L4 <milkweed#8448143>

--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -5,8 +5,8 @@
 
 # Any of several [[plant]]s, of the genus ''[[Asclepias]]'', that have a milky [[sap]] and have [[pod]]s that split to release seeds with silky tufts
 
-===Synonyms===
-*[[silkweed]]
+====Synonyms====
+* [[silkweed]]
 
 [[fr:milkweed]]
 [[vi:milkweed]]
