t+fi:[[jestas sentään]] ([[WT:EDIT|Assisted]]) <good Lord#8450735>

--- a/en/g/good Lord.741512.wikitext
+++ b/en/g/good Lord.741512.wikitext
@@ -10,7 +10,7 @@
 * Chinese:
 *: Mandarin: {{t|zh|天哪|tr=tiān'na|sc=Hani}}
 {{trans-mid}}
-* Finnish: {{t|fi|herranjestas}}
+* Finnish: {{t|fi|herranjestas}},  {{t|fi|jestas sentään}}
 {{trans-bottom}}
 
 ====Synonyms====
