--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -11,27 +11,7 @@
 # An annual variety of ''[[Brassica oleracea]]'', or [[cabbage]], of which the cluster of young flower stalks and buds is eaten as a vegetable.
 # The edible head or “curd” of a cauliflower plant.
 
-====Derived terms====
-* [[broccoflower]]
-* [[cauliflower cheese]]
-* [[cauliflower ear]]
-
-====Translations====
-{{trans-top|Vegetable}}
-* [[Afrikaans]]: {{t|af|blomkool|xs=Afrikaans}}
-* Arabic: {{t|ar|قرنبيط|m|tr=qarnabiiT}},  {{t|ar|قنبيط|m|tr=qunnabiiT}}
-* Armenian: {{t-|hy|ծաղկակաղամբ|tr=çaġkakaġamb}}
-* [[Basque]]: {{t|eu|azalore|xs=Basque}}
-* Bulgarian: {{t|bg|карнабит|m}},  {{t-|bg|карфиол|m}}
-* Chinese:
-*: Mandarin: {{t|cmn|花椰菜|tr=huāyēcài|sc=Hani}},  {{t|cmn|菜花|tr=càihuā|sc=Hani}}
-* Czech: {{t-|cs|květák|m}}, {{t-|cs|karfiól|m}}
-* {{trreq|Danish}}
-* Dutch: {{t+|nl|bloemkool}}
-* Esperanto: {{t|eo|florbrasiko|xs=Esperanto}}
-* {{trreq|Estonian}}
-* Finnish: {{t+|fi|kukkakaali}}
-* French: {{t+|fr|chou-fleur|m}}
+====* French: {{t+|fr|chou-fleur|m}}
 * Georgian: {{t|ka|კალბანი|tr=kalbani|sc=Geor|xs=Georgian}},  {{t|ka|ყვავილოვანი კომბოსტო|tr=qvavilovani kombosto|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Blumenkohl|m}},  ''(Austrian:)'' {{t|de|Karfiol|m}}
 {{trans-mid}}
