Reverted edits by [[Special:Contributions/67.20.225.152|67.20.225.152]] ([[User_talk:67.20.225.152|Talk]]); changed back to last version by [[User:Tbot|Tbot]] <ermine#8452212>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -18,7 +18,13 @@ From {{etyl|fro}} {{term|hermine|lang=fro}}, either from {{etyl|ML.}} {{term|mus
 # {{figuratively}} The [[office]] of a [[judge]]
 # {{heraldry}} A white [[field]] with black spots
 
-====Synonyms=crap head lollllllllllllllllllllll
+====Synonyms====
+* [[stoat]] (''British'')
+* [[short-tailed weasel]]
+* [[wild otter]]
+
+====Translations====
+{{trans-top|Mustela erminea}}
 * Albanian: [[ermelina]]
 * Armenian: {{t+|hy|կնգում|tr=kngum}}, {{t-|hy|սպիտակ աքիս|tr=spitak ak’is}}
 * [[Basque]]: [[erbinude zuri]]
