--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -133,7 +133,7 @@ The meaning {{term|Monday}} is a borrowing, via the [[calque]] {{term|月曜日|
 |freq=23
 |nelson=2169
 |newnelson=2530
-|njecd=2956
+|halpern=2956
 |kld=1876
 |heisig=13
 |tuttle=4b0.1}}
