iwiki +[[:tr:num lock]] <Num Lock#8471420>

--- a/en/n/Num Lock.746598.wikitext
+++ b/en/n/Num Lock.746598.wikitext
@@ -4,3 +4,5 @@
 {{en-noun|-|sg=[[num]] [[lock]]}}
 
 # {{computing}} A [[key]] on a standard extended [[keyboard]] which, when pressed, [[toggle]]s  the keys of the [[numeric]] [[keypad]] between [[cursor]] control functions and numeric [[input]] functions.
+
+[[tr:num lock]]
