--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -56,6 +56,7 @@
 {{trans-mid}}
 * Korean: [[방아]] (bang-a); [[방앗간]] (bang-atgan) (''the building'')
 * Kurdish: {{ku-Arab|[[ئاش]]}}
+* Latin: {{t|la|mola}}
 * [[Macedonian]]: {{t-|mk|млин|m|tr=mlin}}, {{t|mk|мелница|f|tr=mélnica}}, {{t|mk|мелница|f|tr=mélnica}}
 * Norwegian: {{t+|no|mølle|m}}
 * [[Old High German]]: [[mulin]] {{f}}
