--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -79,13 +79,13 @@ Latin [[ructus]]
 * {{audio|Nl-rot.ogg|Audio}}
 
 ===Adjective===
-'''rot'''
+{{nl-adj|rotter}}
 
 # [[rotten]], [[spoiled]], [[decayed]], [[putrid]]
 # [[rotten]], [[tedious]], [[unkind]], [[mean]]
 
-====Inflection====
-{{nl-adjcomp|rot|rotte|rotter|rottere|rotst|rotste}}
+====Declension====
+{{nl-decl-adj|rotte}}
 
 ===Noun===
 '''rot''' {{n}} (Plural: [[rotten]], diminutive: [[rotje]], plural diminutive: [[rotjes]])
