/* Derived terms */ [[trouble at t' mill]] <mill#8473280>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -32,6 +32,7 @@
 * [[run-of-the-mill]]
 * [[rumor mill]], [[rumour mill]]
 * [[steel mill]]
+* [[trouble at t' mill]]
 * [[windmill]]
 
 =====Translations=====
