--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -106,7 +106,7 @@ Origin uncertain.  Apparently representing {{etyl|ang}} {{term||beonet-}} (attes
 ===Verb===
 '''bent'''
 
-# [[are]] (''second person singular present tense of [[zijn]]'')
+# {{nl-verb-form|p=2|n=sg|t=pres|zijn|are}}
 
 ----
 
