--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -122,11 +122,42 @@
 ----
 
 ==French==
+{{wikipedia|lang=fr}}
+===Etymology 1===
+XIXth century - from {{etyl|de|fr}} {{term|staffieren|lang=de}} or Old French {{term|estofer|lang=fro}} (modern French {{term|étoffer|lang=fr}})
+
+===Pronunciation===
+* {{IPA|staf|lang=fr}}
 
 ===Noun===
 {{fr-noun|m|plural=staffs}}
 
-# A [[staff]] ([[cane]], [[walking stick]]).
+# [[#English|staff]], mixture of plaster and fibre.
+#: ''Le '''staff''' apparaît grâce au Français Mézier qui vers 1850 a l'idée de réaliser une première corniche préfabriquée armée d'une toile de jute. Dès lors l'emploi du '''staff''' se développe rapidement jusqu'à atteindre son apogée à la belle époque.'' (Wikipédia)
+
+====Derived terms====
+* {{l|fr|staffer}}
+* {{l|fr|staffeur}}
+
+===Etymology 2===
+XXth century - from {{etyl|en|fr}} {{term|staff|lang=en}}
+
+===Pronunciation===
+* {{IPA|staf|lang=fr}}
+
+===Noun===
+{{fr-noun|m}}
+
+# [[#English|staff]], 
+#: ''les membres du '''staff'''.''
+# [[governing]] [[body]] (army, corporation, administration, etc.)
+#: ''Il avait été prévu une centaine d'infirmiers et un '''staff''' comprenant le médecin-chef, deux assistants, six internes.'' (H. Bazin, Fin asiles, 1959, p. 81)
+
+====Synonyms====
+* {{l|fr|équipe}}, {{l|fr|personnel}}
+
+===References===
+* {{R:TLFi}}
 
 ----
 
