/* Derived terms */ + [[parapositronium]], [[orthopositronium]] <positronium#8489001>

--- a/en/p/positronium.746650.wikitext
+++ b/en/p/positronium.746650.wikitext
@@ -15,6 +15,8 @@
 
 ====Derived terms====
 *[[dipositronium]]
+*[[orthopositronium]]
+*[[parapositronium]]
 
 [[fr:positronium]]
 [[is:positronium]]
