--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -125,7 +125,7 @@ From {{proto|Slavic|syrъ|lang=sh}}.
 ====Declension====
 * {{l|sh|sirni|sȋrnī}}
 
-[[Category:sr:Foods]]
+[[Category:sh:Foods]]
 
 ----
 
