--- a/en/b/burqa.803246.wikitext
+++ b/en/b/burqa.803246.wikitext
@@ -14,12 +14,15 @@
 ==French==
 {{wikipedia|lang=fr}}
 
+===Alternative spellings===
+*{{l|fr|burka}}
+
 ===Noun===
-{{infl|fr|noun}}
+{{fr-noun|f}}
 
 # [[burka]] (a garment that covers the whole body)
 
-{{tbot entry|French|burka|2009|July|fr}}
+[[Category:fr:Clothing]]
 
 [[es:burqa]]
 [[fr:burqa]]
