trans link [[Old English]] <thing#8534969>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -101,7 +101,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * {{trreq|Nepali}}
 * Norwegian: {{t+|no|ting|m}}, {{t-|no|dings|m}}, {{t+|no|greie|f}}
 * [[Occitan]]: {{t-|oc|causa|f|xs=Occitan}}
-* Old English: {{t-|ang|þing|n|xs=Old English}}
+* [[Old English]]: {{t-|ang|þing|n|xs=Old English}}
 * Persian: {{fa-Arab|[[چیز]]}} (čiz)
 * Polish: {{t+|pl|rzecz|f}}
 * Portuguese: {{t+|pt|coisa|f}}
@@ -166,7 +166,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * [[Macedonian]]: {{t-|mk|нешто|n|tr=néšto}}
 * [[Marathi]]: [[वस्तु]] (vastu)
 * Norwegian: {{t+|no|ting}}, {{t-|no|dings}}, {{t+|no|greie|m}}
-* Old English: {{t-|ang|þing|n|xs=Old English}}
+* [[Old English]]: {{t-|ang|þing|n|xs=Old English}}
 * Persian: {{fa-Arab|[[چیز]]}} (čiz)
 * Polish: {{t+|pl|rzecz|f}}
 * Portuguese: {{t+|pt|coisa|f}}
