--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -38,6 +38,7 @@ From {{term|bend}}.
 {{trans-mid}}
 * Hungarian: {{t|hu|hajlott}}, {{t+|hu|görbe}}
 * Romanian: {{t-|ro|gârbov}}
+* [[Scottish Gaelic]]: {{t|gd|lùbach}}
 * Swedish: {{t|sv|böjd}}
 {{trans-bottom}}
 
