t+sv:[[igen]] ([[WT:EDIT|Assisted]]) <again#8536561>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -136,6 +136,7 @@
 * {{trreq|Portuguese}}
 * Russian: {{t-|ru|говорите|tr=govorít'e}}
 * {{trreq|Spanish}}
+* Swedish: {{t|sv|igen}}
 * [[Tagalog]]: {{t+|tl|ano|xs=Tagalog}}?, ano {{t|tl|ulit|xs=Tagalog}}? ano {{t-|tl|po|xs=Tagalog}}? (formal)
 {{trans-bottom}}
 
