iwiki +[[:ml:badger]] <badger#8537435>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -181,6 +181,7 @@ From {{etyl|en|fr}} {{term|badge|lang=en}}
 [[it:badger]]
 [[lt:badger]]
 [[hu:badger]]
+[[ml:badger]]
 [[nl:badger]]
 [[oc:badger]]
 [[pl:badger]]
