/* English */ <Num Lock#8543583>

--- a/en/n/Num Lock.746598.wikitext
+++ b/en/n/Num Lock.746598.wikitext
@@ -4,7 +4,7 @@
 * [[num lock]]
 
 ===Noun===
-{{en-noun|head=[[Num]] [[Lock]]}}
+{{en-noun|head=[[num|Num]] [[lock|Lock]]}}
 
 # {{computing}} A [[key]] on a standard extended [[keyboard]] which, when pressed, [[toggle]]s  the keys of the [[numeric]] [[keypad]] between [[cursor]] control functions and numeric [[input]] functions.
 
