--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -27,6 +27,7 @@
 ====Derived terms====
 * [[islander]]
 * [[island universe]]
+* [[islandy]]
 * [[desert island]]
 * [[safety island]]
 * [[security island]]
