--- a/en/d/diacetyl.745830.wikitext
+++ b/en/d/diacetyl.745830.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun|-}}
 
-#{{organic chemistry|in combination}}}} Two [[acetyl]] groups in a [[compound]]
+#{{organic chemistry|in combination}} Two [[acetyl]] groups in a [[compound]]
 #{{organic compound}} [[butanedione]]
 
 ====Derived terms====
