--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -31,6 +31,7 @@
 * Romanian: [[patrulater]], [[cadrilater]]
 * Russian: {{t+|ru|четырёхугольник|m}}
 * Spanish: {{t+|es|cuadrilátero|m}}
+* Swedish: {{t|sv|fyrhörning|c}}
 * [[Telugu]]: [[చతుర్భుజి]] (chaturbhuji)
 {{trans-bottom}}
 
