--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -50,6 +50,7 @@
 * Armenian: {{t-|hy|պարոն|tr=paron}}
 * Belarusian: {{t|be|спадар|m|tr=spadár|xs=Belarusian}},  {{t-|be|пан|m|tr=pan|xs=Belarusian}}
 * Bulgarian: {{t+|bg|господин|m|tr=gospodín}}
+* Burmese: {{t|my|ဦး|tr=u:|sc=Mymr}}
 * Chinese:
 *: Mandarin: {{t-|cmn|先生|tr=xiānsheng|sc=Hani}}
 * Czech: {{t+|cs|pan|m}},  {{t+|cs|pán|m}}
