--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|ang}} ''[[leþer]]'', from {{proto|Germanic|''leþran''}} (cf. {{etyl|nl|-}}/{{etyl|de|-}} {{term|leder}}), from {{etyl|cel}} *''letrom'' (cf. {{etyl|cy|-}} {{term|lledr}}, {{etyl|ga|-}} {{term|lethar}}), from pre-Celtic *''péltrom'', from {{proto|Indo-European|''pilso'', ''pilto''}} 'felt, pelt'. More at [[felt]].
+{{etyl|ang}} ''[[leþer]]'', from {{proto|Germanic|''leþran''}} (cf. {{etyl|nl|-}}/{{etyl|de|-}} {{term|leder}}), from {{etyl|cel}} *''letrom'' (cf. {{etyl|cy|-}} {{term|lledr}}, {{etyl|ga|-}} {{term|lethar}}), from pre-Celtic *''péltrom'', from {{proto|Indo-European|''pel-''}} 'to beat'. More at [[anvil]].
 
 ===Pronunciation===
 * {{audio|en-us-leather.ogg|Audio (US)}}
