--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -93,8 +93,8 @@
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|Kurdish}}
 * [[Ladin]]: [[porcel]]
 * Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
-{{trans-mid}}
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
+{{trans-mid}}
 * Lithuanian: [[kiaulė]] {{g|Lithuanian}}
 * [[Lower Sorbian]]: [[swinja]] {{f}}
 * [[Macedonian]]: [[свиња]] (svinja) {{f}}
@@ -129,7 +129,7 @@
 * [[Taos]]: [[kùci’ína]]
 * [[Telugu]]: [[పంది]] (paMdi)
 * [[Tok Pisin]]: [[pik]]
-* [[Tongan]]: [[puaka]]
+* [[Tongan]]: [[puaka]],  {{t|to|puaka}}
 * [[Tswana]]: {{t-|tn|kolobe|xs=Tswana}} (9/10)
 * Turkish: {{t+|tr|domuz}}
 * Ukrainian: {{t-|uk|свиня|f|tr=svynja|xs=Ukrainian}}
