/* Translations */ gd <blow#8573656>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -118,7 +118,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Romanian: {{t|ro|sufla}}
 * [[Romansch]]: {{t|rm|sufflar|xs=Romansch}}
 * Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
-* [[Scottish Gaelic]]: [[séid]]
+* [[Scottish Gaelic]]: {{t|gd|sèid}}
 * [[Sicilian]]: [[ciusciari]]
 * Slovene: {{t+|sl|pihati}}
 * Spanish: {{t+|es|soplar}}
@@ -137,6 +137,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Korean: [[불다]] (bulda)
 * Polish: [[zdmuchnąć]]
 * Russian: [[сдувать]] (sduvát') {{impf}}, [[сдуть]] (sdut') {{pf}}
+* [[Scottish Gaelic]]: {{t|gd|sèid}}
 * Vietnamese: {{t+|vi|thở|xs=Vietnamese}}, {{t+|vi|thổi|xs=Vietnamese}}
 {{trans-bottom}}
 
@@ -166,19 +167,22 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Vietnamese: {{t+|vi|thổi|xs=Vietnamese}}
 {{trans-bottom}}
 
-{{trans-top|to blow a musical instrument to makeit give a sound}} <!--5-->
+{{trans-top|to blow a musical instrument to make it give a sound}} <!--5-->
 * Finnish: {{t+|fi|soittaa}}, {{t+|fi|puhaltaa}}
 {{trans-mid}}
+* [[Scottish Gaelic]]: {{t|gd|sèid}}
 {{trans-bottom}}
 
 {{trans-top|to play a musical instrument by blowing}} <!--6-->
 * Finnish: {{t+|fi|soittaa}}, {{t+|fi|puhaltaa}}
 {{trans-mid}}
+* [[Scottish Gaelic]]: {{t|gd|sèid}}
 {{trans-bottom}}
 
 {{trans-top|to make a sound as if being blown}} <!--7-->
 * Finnish: {{t+|fi|soida}}
 {{trans-mid}}
+* [[Scottish Gaelic]]: {{t|gd|sèid}}
 {{trans-bottom}}
 
 {{trans-top|(of a cetacean) exhale visibly through the spout the seawater}} <!--8-->
@@ -188,6 +192,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Finnish: {{t-|fi|suihkuttaa}}, {{t+|fi|puhaltaa}}
 {{trans-mid}}
 * Korean: [[뿜다]] (ppumda)
+* [[Scottish Gaelic]]: {{t|gd|sèid}}
 * Swahili: {{t+|sw|panchi|xs=Swahili}}
 * Vietnamese: [[phun]] [[nước]]
 {{trans-bottom}}
