--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -55,6 +55,11 @@ From {{etyl|ang}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation 
 #: ''She '''bid''' £2000 for the Persian carpet.''
 # {{context|intransitive|card games}} To [[announce]] one's [[goal]], before starting [[play]].
 # {{context|transitive|card games}} To [[announce]] one's goal, before starting play.
+# {{context|political science}} announce one's goal
+#: ''She put in her bid for the presidency.''
+#: ''He put in his bid for office.''
+# {{context|political science}} attempt, strive, persue
+#: ''Their efforts represented a sincere bid for success.''
 
 =====Translations=====
 {{trans-top|intransitive: to make an offer}}
