t+tr:[[efendim]] t+tr:[[komutanım]] t-balance t+tr:[[beyefendi]] ([[WT:EDIT|Assisted]]) <sir#8579237>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -36,13 +36,15 @@
 * Dutch: {{t+|nl|heer|m}}, {{t+|nl|meneer|m}}
 {{trans-mid}}
 * Greek: {{t|el|Σέρ|m|sc=Grek}}
+* Turkish: {{t|tr|efendim}}
 {{trans-bottom}}
 
 {{trans-top|address to a military superior}}
 * Dutch: {{t+|nl|meneer|m}}
 * French: {{t+|fr|monsieur|m}}
-* Russian: (''comrade'') {{t+|ru|товарищ|m|tr=továrišč}}  (+ military rank) {{qualifier|in the Soviet/Russian army}}, {{t+|ru|сэр|m|tr=ser}} {{qualifier|in translations from English}}, {{t+|ru|господин|m|tr=gospodín}} (+ military rank) {{qualifier|in the Russian army before 1917}}
 {{trans-mid}}
+* Russian: (''comrade'') {{t+|ru|товарищ|m|tr=továrišč}}  (+ military rank) {{qualifier|in the Soviet/Russian army}}, {{t+|ru|сэр|m|tr=ser}} {{qualifier|in translations from English}}, {{t+|ru|господин|m|tr=gospodín}} (+ military rank) {{qualifier|in the Russian army before 1917}}
+* Turkish: {{t|tr|komutanım}}
 {{trans-bottom}}
 
 {{trans-top|address to any male, especially if his name or proper address is unknown}}
@@ -63,6 +65,7 @@
 * [[Macedonian]]: {{t-|mk|господин|m|tr=góspodin}},  {{t-|mk|господине|m|tr=gospódine}} ([[vocative case]])
 * Polish: [[pan]] {{m}}, [[panie]] {{m}} ([[vocative case]])
 * Russian: {{qualifier|obsolete}} {{t+|ru|сударь|m|tr=súdarʹ}},  {{t+|ru|господин|m|tr=gospodín}}, {{t+|ru|сэр|m|tr=ser}} {{qualifier|in translations from English}}
+* Turkish: {{t|tr|beyefendi}}
 * Ukrainian: {{t-|uk|пан|m|tr=pan|xs=Ukrainian}}
 {{trans-bottom}}
 
