--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -1,5 +1,6 @@
 ==English==
-
+[[Image:Bundesarchiv Bild 183-F0804-0015-001, Schwarza, finnische Oberschülerinnen.jpg|A woman wearing a hairnet|thumb]]
+{{wikipedia}}
 ===Etymology===
 “[[hair]]” + “[[net]]”
 
