Reverted edits by [[Special:Contributions/89.211.218.17|89.211.218.17]] ([[User_talk:89.211.218.17|Talk]]); changed back to last version by [[User:Conrad.Bot|Conrad.Bot]] <hances#8581809>

--- a/en/h/hances.746839.wikitext
+++ b/en/h/hances.746839.wikitext
@@ -13,4 +13,8 @@
 
 ===Anagrams===
 * {{alphagram|acehns}}
-* [[encash#Sinhala|encash]]
+* [[encash#English|encash]]
+
+[[Category:English plurals]]
+
+[[ar:hances]]
