updating French categories using [[Project:AWB|AWB]] <seize#8585622>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -96,15 +96,13 @@ From {{etyl|la|fr}} {{term|sedecim|sēdecim|lang=la}}.
 ===Pronunciation===
 * {{audio|Fr-seize.ogg|audio}}
 
-===Numeral===
-'''seize'''
+===Cardinal number===
+{{infl|fr|cardinal number}}
 
 # [[sixteen]]
 
 ====Derived terms====
 * [[seizième]]
-
-[[Category:fr:Cardinal numbers]]
 
 [[bg:seize]]
 [[de:seize]]
