--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -63,7 +63,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm}} {{term|seisen|lang=enm}}, {{te
 * Korean: [[붙잡다]] (butjapda)
 * Latin: {{t-|la|capere}}
 * Norwegian: {{t-|no|gripe}}
-* Old English: {{t-|ang|niman|xs=Old English}}
+* [[Old English]]: {{t-|ang|niman|xs=Old English}}
 * [[Ottoman Turkish]]: {{tø|ota|استولى على|tr=istevli ele|sc=ota-Arab}}
 * Portuguese: {{t+|pt|agarrar}}, {{t+|pt|capturar}}
 * Russian: {{t|ru|захватывать|tr=zaxvátyvat’}} {{impf}},  {{t|ru|захватить|tr=zaxvatít’}} {{pf}},  {{t|ru|схватывать|tr=sxvátyvat’}} {{impf}},  {{t|ru|схватить|tr=sxvatít’}} {{pf}}
