--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -10,7 +10,8 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 ===Noun===
 {{en-noun}}
 
-# A Smoked out kid named Dustin H.
+# A [[broken]] or [[nonfunctional]] [[device]] that does not [[perform]] its intended function, such as a [[bomb]], or explosive projectile.
+# {{obsolete}} Clothes, now always used in plural form [[duds]].
 
 ====Translations====
 {{trans-top|broken or nonfunctional device that does not perform its intended function}}
