/* Derived terms */ adding adjective <fraction#8600150>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -20,6 +20,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 
 ====Derived terms====
 {{top2}}
+* [[fractional]]
 * [[common fraction]]
 * [[decimal fraction]]
 * [[Egyptian fraction]]
