--- a/en/m/mikados.746821.wikitext
+++ b/en/m/mikados.746821.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Noun===
@@ -6,7 +5,14 @@
 
 # {{plural of|[[mikado]]}}
 
-[[Category:English plurals]]
+----
+
+==French==
+
+===Noun===
+'''mikados''' {{m|p}}
+
+# {{plural of|[[mikado#French|mikado]]|lang=fr}}
 
 [[ar:mikados]]
 [[fr:mikados]]
