--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -129,6 +129,7 @@ From {{etyl|la}} ''[[consumere]]''.
 [[kn:consume]]
 [[ku:consume]]
 [[lo:consume]]
+[[lt:consume]]
 [[hu:consume]]
 [[ml:consume]]
 [[nl:consume]]
