--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -122,6 +122,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * [[Sicilian]]: [[ciusciari]]
 * Slovene: {{t+|sl|pihati}}
 * Spanish: {{t+|es|soplar}}
+* Swedish: {{t|sv|blåsa}}
 * Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
 {{trans-bottom}}
 
