--- a/en/s/Swiss chard.856482.wikitext
+++ b/en/s/Swiss chard.856482.wikitext
@@ -12,6 +12,7 @@
 
 ====Translations====
 {{trans-top|an edible leafy vegetable}}
+* Greek: {{t|el|Σέσκουλο|n|sc=Grek}}
 * Hungarian: {{t+|hu|mángold}}
 {{trans-mid}}
 {{trans-bottom}}
