--- a/en/m/monetarist.720270.wikitext
+++ b/en/m/monetarist.720270.wikitext
@@ -11,7 +11,7 @@
 ===Adjective===
 {{en-adj}}
 
-# Of, pertaining to, or advocating [[monetarism]]
+# Of, pertaining to, or advocating [[monetarism]].
 
 ====Translations====
 * Greek: {{t|el|μονεταριστικός|tr=monetaristikós}}
