t+it:[[allora]] ([[WT:EDIT|Assisted]]) <then#8631360>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -48,6 +48,7 @@
 * Greek: {{t+|el|τότε}}
 * Hebrew: [[אז]] (az)
 * Hungarian: {{t+|hu|akkor}}
+* Italian: {{t|it|allora}}
 * Japanese: {{t|ja|そのとき|tr=sono toki}}, {{t|ja|その時点|tr=sono jiten}}
 * Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
 {{trans-mid}}
