/* Related terms */ + <species#8636843>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -43,11 +43,12 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * [[specie]]
 * [[specific]]
 {{mid3}}
+* [[speciose]]
 * [[specious]]
 * [[spectacle]]
 * [[spectacular]]
-* [[speculate]]
 {{mid3}}
+* [[speculate]]
 * [[speculation]]
 * [[speculative]]
 * [[speculator]]
