--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -76,6 +76,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * Danish: {{t+|da|art|c}}
 {{trans-mid}}
 * Finnish: {{t+|fi|laji}}
+* Russian: {{t|ru|вид|m|tr=vid|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|gnè|f|xs=Scottish Gaelic}},  {{t-|gd|seòrsa|m|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|especie}}
 {{trans-bottom}}
