--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -1,27 +1,9 @@
 ==English==
 
-===Etymology===
-{{etyl|la}} {{prefix|multi|colour}}
-
-===Alternative spellings===
-* {{i-c|Chiefly American}} [[multicolor]]
-
 ===Adjective===
 {{infl|en|adjective}}
 
-# {{chiefly|Canadian|Australian|Jamaican|British|International}} Having, [[resembling]], or pertaining to many or a world of [[colour]]s.
-
-====Translations====
-{{trans-top|having many colours}}
-* Dutch: {{t+|nl|bont}}, {{t|nl|bonte}}, {{t|nl|veelkleurig}}, {{t|nl|veelkleurige}}
-* Esperanto: {{t|eo|multkolora|xs=Esperanto}}
-* French: {{t|fr|multicooleur}}
-* German: {{t+|de|bunt}}, {{t-|de|vielfarbig}}
-{{trans-mid}}
-* Italian: {{t+|it|multicolore}}
-* Latin: {{t-|la|multicolor}}
-* Romanian: {{t+|ro|multicolor}}
-{{trans-bottom}}
+# {{chiefly|Commonwealth}} {{alternative spelling of|multicolor}}
 
 [[fr:multicolour]]
 [[pl:multicolour]]
