--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -55,7 +55,7 @@
 #[[intact]]
 
 ===Noun===
-*[[shape]], [[condition]]
+#[[shape]], [[condition]]
 
 [[Category:Danish adjectives]]
 [[Category:Danish nouns]]
