t+tr:[[tiksindirici]] ([[WT:EDIT|Assisted]]) <pig#8687729>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -179,6 +179,7 @@
 *: Roman: [[svinja#Serbian|svinja]] {{f}}
 * Slovene: [[svinja]] {{f}}, [[prasec]] {{m}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}
+* Turkish: {{t|tr|tiksindirici}}
 * Welsh: {{t-|cy|mochyn|m|xs=Welsh}}
 {{trans-bottom}}
 
