--- a/en/p/positronium.746650.wikitext
+++ b/en/p/positronium.746650.wikitext
@@ -7,7 +7,7 @@
 # {{physics}} An [[exotic atom]] consisting of a [[positron]] and an [[electron]], but having no [[nucleus]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|exotic atom}}
 * Italian: {{t-|it|positronio|m}}
 {{trans-mid}}
 {{trans-bottom}}
