tgloss:"part of blood circulation" ([[WT:EDIT|Assisted]]) <systemic circulation#8688693>

--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -6,7 +6,7 @@
 # {{anatomy}} The part of blood [[circulation]] which carries oxygenated blood away from the heart, to the body, and returns deoxygenated blood back to the heart.
 
 ====Translations====
-{{trans-top}}
+{{trans-top|part of blood circulation}}
 * Finnish: {{t-|fi|suuri verenkierto}}
 {{trans-mid}}
 {{trans-bottom}}
