--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -56,7 +56,7 @@
 * Polish: [[dzik]] '' ''
 * Portuguese: {{t+|pt|javali}}
 * [[Romani]]: [[divlio-balo]] {{m}}
-* Romanian: [[mistreţ]]
+* Romanian: [[mistreţ]],  {{t|ro|vier}}
 * [[Romansch]]: [[portg selvadi]]
 * Russian: {{t+|ru|кабан|m|tr=kabán}}, {{t+|ru|вепрь|m|tr=vépr'}}
 * [[Sami]]: [[meahccespiidni]]
