--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -1,3 +1,31 @@
+==English==
+{{webster 1913}}
+
+===Etymology===
+From {{etyl|fro}} {{term|lang=fro|quadrat||a square}} < {{etyl|la}} {{term|lang=la|quadratus||square}}, past participle of {{term|lang=la|quadrare||to make four-cornered, square, put in order, intransitive be square}} < {{term|lang=la|quadra||a square}}, later {{term|quadrus||square}} < {{term|quattuor||four}}.
+
+===Adjective===
+{{en-adj}}
+
+# Having four equal sides, the opposite sides parallel, and four right angles; square.
+# Produced by multiplying a number by itself; square.
+# {{archaic}} Square; even; balanced; equal; exact.
+# {{archaic}} Squared; suited; correspondent.
+
+===Noun===
+{{en-noun|?}}
+
+# {{geometry}} A plane surface with four equal sides and four right angles; a square; hence, figuratively, anything having the outline of a square.
+# {{astrology}} An aspect of the heavenly bodies in which they are distant from each other 90°, or the quarter of a circle; quartile.
+# {{anatomy}} The quadrate bone. 
+
+===External links===
+* {{R:Webster 1913}}
+* {{R:Century 1911}}
+* {{R:OneLook}}
+
+----
+
 ==Italian==
 
 ===Adjective===
