--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -161,6 +161,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[sv:bamboo]]
 [[ta:bamboo]]
 [[te:bamboo]]
+[[th:bamboo]]
 [[tr:bamboo]]
 [[vi:bamboo]]
 [[vo:bamboo]]
