--- a/en/r/rasante.802841.wikitext
+++ b/en/r/rasante.802841.wikitext
@@ -7,6 +7,8 @@
 
 ===Anagrams===
 * {{alphagram|aaenrst}} [[rasenta#Italian|rasenta]], [[stanare#Italian|stanare]], [[stanerà#Italian|stanerà]]
+
+[[el:rasante]]
 [[fr:rasante]]
 [[io:rasante]]
 [[pt:rasante]]
