/* Noun */ image, coord, derived <mill#8702209>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -130,9 +130,22 @@
 Ultimately from Latin ''[[millesimum]]''
 
 ====Noun====
+[[File:MillToken.jpeg|thumb|[[Missouri]] mill token.]]
 {{en-noun}}
 
 # An obsolete [[coin]] with value one-thousandth of a [[dollar]], or one-tenth of a [[cent]].
+# One [[thousandth]] part, particularly in [[millage]] rates of property tax.
+
+====Synonyms====
+* {{sense|one thousandth part}} [[per mil]]
+
+====Coordinate terms====
+{{sense|one thousandth part}}
+* [[percent]]
+* [[basis point]]
+
+====Derived terms====
+* [[millage]]
 
 =====Translations=====
 {{trans-top|coin}}
