/* English */ wp <mill#8702231>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -1,6 +1,6 @@
 {{also|Mill}}
 ==English==
-
+{{wikipedia}}
 ===Pronunciation===
 * {{enPR|mĭl}}, {{IPA|/mɪl/}}, {{SAMPA|/mIl/}}
 * {{audio|en-us-mill.ogg|Audio (US)}}
