/* Etymology 2 */ wp, {etyl} <mill#8702238>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -127,7 +127,8 @@
 {{trans-bottom}}
 
 ===Etymology 2===
-Ultimately from Latin ''[[millesimum]]''
+{{wikipedia|Mill (currency)}}
+Ultimately from {{etyl|la}} {{term|millesimum|lang=la}}.
 
 ====Noun====
 [[File:MillToken.jpeg|thumb|[[Missouri]] mill token.]]
