t+pl:[[gatunek]] t+de:[[Gattung]] t-balance ([[WT:EDIT|Assisted]]) <species#8716236>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -74,8 +74,10 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * [[Catalan]]: {{t-|ca|espècie|f}}
 * Czech: {{t+|cs|druh}}
 * Danish: {{t+|da|art|c}}
-{{trans-mid}}
 * Finnish: {{t+|fi|laji}}
+{{trans-mid}}
+* German: {{t|de|Gattung|f}}
+* Polish: {{t|pl|gatunek|m}}
 * Russian: {{t+|ru|вид|m|tr=vid}}
 * [[Scottish Gaelic]]: {{t-|gd|gnè|f|xs=Scottish Gaelic}},  {{t-|gd|seòrsa|m|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|especie}}
