--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -73,6 +73,7 @@ From {{etyl|la|fr}} {{term|quadrans|quadrāns|fourth part of something, quarter|
 [[id:quadrant]]
 [[it:quadrant]]
 [[ml:quadrant]]
+[[my:quadrant]]
 [[ru:quadrant]]
 [[fi:quadrant]]
 [[ta:quadrant]]
