--- a/en/r/revest.855934.wikitext
+++ b/en/r/revest.855934.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-From {{etyl|xno}} {{term|revestier}}, {{revestre}} et al., {{etyl|frm}} {{term|revestir}}, and their source, {{etyl|LL.}} {{term|revestire}}, from {{etyl|la}} {{term|re-}} + {{term|vestire|vestīre|to clothe}}.
+From {{etyl|xno}} {{term|revestier}}, {{term|revestre}} et al., {{etyl|frm}} {{term|revestir}}, and their source, {{etyl|LL.}} {{term|revestire}}, from {{etyl|la}} {{term|re-}} + {{term|vestire|vestīre|to clothe}}.
 
 ===Pronunciation===
 *{{a|UK}} {{IPA|/ɹiːˈvɛst/}}
