iwiki +[[:my:rabbit]] <rabbit#8720683>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -238,6 +238,7 @@ From [[Cockney rhyming slang]] ''[[rabbit and pork]]'', to talk.
 [[lo:rabbit]]
 [[lt:rabbit]]
 [[hu:rabbit]]
+[[my:rabbit]]
 [[nl:rabbit]]
 [[no:rabbit]]
 [[pl:rabbit]]
