--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -19,7 +19,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 #*: ''Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.''
 #: ''I cast the '''species''' of the Sun onto a sheet of paper through a telescope.''
 #* {{RQ:Schuster Hepaticae V|vii}}
-#*: Firstly, I continue to base most '''species''' treatments on personally collected material, rather than on herbarium plants. {{...}} Secondly, I continue to base my concepts on intensive study of a limited suite of collections, rather than superficial study of every packet that comes to hand.
+#*: Firstly, I continue to base most '''species''' treatments on personally collected material, rather than on herbarium plants.
 # {{mineralogy}} A [[mineral]] with a unique chemical formula whose [[crystals]] belong to a unique crystallographic system.
 # {{obsolete}} The [[image]] of something cast on a surface, or [[reflected]] from a surface, or [[refracted]] through a [[lens]] or [[telescope]]; a [[reflection]].
 # {{Roman Catholicism}} Either of the two elements of the [[Eucharist]] after they have been [[consecrated]], so named because they retain the image of the bread and wine before their [[transubstantiation]] into the body and blood of Christ.
