--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -51,18 +51,30 @@
 
 ==Danish==
 
-===Adjective===
-{{infl|da|adjective}}
+===Pronunciation===
+* {{IPA|/behɔl/|[b̥eˈhʌlˀ]|lang=da}}
 
-# [[intact]]
+===Etymology 1===
+From {{etyl|gml|da}} {{term|beholt|lang=gml}}, {{term|behalt|lang=gml}}.
 
-===Noun===
+====Noun====
 {{infl|da|noun}}
 
-# [[shape]], [[condition]]
+# {{qualifier|archaic}} [[haven]], [[refuge]]
+# '''''i behold'''''
+## [[safe]], [[intact]]
+## [[left]]
+# '''''i god behold'''''
+## [[safe]], [[safely]]
+## [[safe and sound]], safe and [[well]]
 
-[[Category:Danish adjectives]]
-[[Category:Danish nouns]]
+===Etymology 2===
+See {{term|beholde||to keep|lang=da}}
+
+====Verb====
+{{infl|da|verb form}}
+
+# {{form of|imperative|beholde|lang=Danish}}
 
 [[fa:behold]]
 [[fr:behold]]
