--- a/en/p/pruning shears.856099.wikitext
+++ b/en/p/pruning shears.856099.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|a tool}}
+* Polish: {{t|pl|sekator}}
 * Swedish: {{t-|sv|trädgårdssax|c}}
 {{trans-mid}}
 {{trans-bottom}}
