t+ka:[[ტყავი]] t+th:[[หนัง]] ([[WT:EDIT|Assisted]]) <leather#8741596>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -37,7 +37,7 @@
 * Esperanto: {{t-|eo|ledo|xs=Esperanto}}
 * Finnish: {{t+|fi|nahka}}
 * French: {{t+|fr|cuir|m}}
-* {{trreq|Georgian}}
+* Georgian: {{t|ka|ტყავი|tr=tqavi|sc=Geor}}
 * German: {{t+|de|Leder|n}}
 * {{trreq|Greek}}
 * [[Guaraní]]: [[pire]]
@@ -68,7 +68,7 @@
 * Slovene: {{t+|sl|usnje|n}}
 * Spanish: {{t+|es|cuero|m}}
 * Swedish: {{t+|sv|läder|n}} (1)
-* {{trreq|Thai}}
+* Thai: {{t|th|หนัง|tr=năng|sc=Thai}}
 * Turkish: {{t+|tr|deri}}
 * {{trreq|Vietnamese}}
 {{trans-bottom}}
