--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -59,7 +59,7 @@
 * Kurdish: {{ku-Arab|[[ئاش]]}}
 * Latin: {{t-|la|mola}}
 * [[Macedonian]]: {{t-|mk|млин|m|tr=mlin}}, {{t|mk|мелница|f|tr=mélnica}}, {{t|mk|мелница|f|tr=mélnica}}
-* Norwegian: {{t+|no|mølle|m}}
+* Norwegian: {{t+|no|mølle|m}},  {{t|no|mylna|f}}
 * [[Old High German]]: [[mulin]] {{f}}
 * Polish: {{t+|pl|młyn|m}}
 * Portuguese: [[moenda]] {{f}}, [[moinho]] {{m}}
