--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -18,7 +18,7 @@ From {{term|bend}}.
 {{en-adj}}
 
 # Of something that is usually straight: folded.
-# {{context|slang|derogatory|mostly|UK}} [[homosexual|Homosexual]].
+# {{derogatory|colloquial}} {{chiefly|UK}} [[homosexual|Homosexual]].
 # [[determined|Determined]] or [[insistent]].
 #: ''He was '''bent''' on going to Texas, but not even he could say why.''
 # Of a person leading a life of [[crime]].
