/* English */  [[Category:LGBT]] <bent#8753060>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -100,6 +100,8 @@ Origin uncertain.  Apparently representing {{etyl|ang}} {{term||beonet-}} (attes
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 
+[[Category:LGBT]]
+
 ----
 
 ==Dutch==
