--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -20,6 +20,17 @@ http://www.wto.org/
 * [[two#English|two]], [[Two#English|Two]]
 * [[wot#English|wot]]
 
+----
+
+==Mandarin==
+
+===Initialism===
+{{infl|cmn|initialism}}
+
+# [[World Trade Organization]]
+
+----
+
 [[zh-min-nan:WTO]]
 [[cs:WTO]]
 [[de:WTO]]
