--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -8,7 +8,7 @@
 ====Translations====
 {{trans-top|World Trade Organization}}
 * French: {{t-|fr|OMC|f}}
-* Russian: {{t+|ru|ВТО|f|ve-te-ó}}
+* Russian: {{t+|ru|ВТО|f|tr=ve-te-ó}}
 {{trans-mid}}
 * Spanish: {{t-|es|OMC}}
 {{trans-bottom}}
