fixed ----'s, template -Initialism +initialism <WTO#8756421>

--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -1,9 +1,10 @@
 {{wikipedia|WTO}}
 ==English==
+
 ==={{initialism}}===
 '''WTO'''
 
-#World Trade Organization
+# World Trade Organization
 
 ====Translations====
 {{trans-top|World Trade Organization}}
@@ -18,7 +19,7 @@
 http://www.wto.org/
 
 ===Anagrams===
-* {{alphagram|[[OTW#English|OTW]]}} 
+* {{alphagram|[[OTW#English|OTW]]}}
 * [[owt#English|owt]]
 * [[tow#English|tow]]
 * [[two#English|two]], [[Two#English|Two]]
@@ -28,12 +29,10 @@ http://www.wto.org/
 
 ==Mandarin==
 
-==={{Initialism|cmn}}===
+==={{initialism|cmn}}===
 {{infl|cmn|initialism}}
 
 # [[World Trade Organization]]
-
-----
 
 [[zh-min-nan:WTO]]
 [[cs:WTO]]
