--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -11,7 +11,7 @@
 ===Verb===
 {{en-verb|beholds|beholding|beheld|'''[[beheld]]''' or rarely '''[[beholden]]'''}}
 
-# {{transitive}} To [[see]], or to [[look at]], or to take on, or to take onboard
+# {{transitive}} To [[see]], or to [[look at]].
 
 ====Synonyms====
 * [[get a load of]]
