--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -3,7 +3,7 @@
 ===Adjective===
 {{infl|en|adjective}}
 
-# {{chiefly|Commonwealth}} {{alternative spelling of|multicolor}}
+# {{chiefly|British|and|Canadian}} {{alternative spelling of|multicolor}}
 
 [[fr:multicolour]]
 [[pl:multicolour]]
