--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -18,6 +18,8 @@
 {{en-prep}}
 
 # [[in|In]] or very [[near]] a particular [[place]].
+#* {{RQ:Schuster Hepaticae V|4}}
+#*: (''b'') sporophyte with foot reduced, the entire sporophyte enveloped by the calyptra, which is ± stipitate '''at''' the base.
 #: '''''At''' that precise position, '''at''' Jim’s house.''
 # {{italbrac|indicating time}} [[simultaneous|Simultaneous]].
 #: '''''At''' six o’clock, at closing time.''
