--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -288,7 +288,15 @@
 [[Category:Norwegian conjunctions]]
 
 ----
+==Pipil==
+===Etymology===
+{{proto|Nahuan|lang=ppl}} ''*ātla'', from {{proto|Uto-Aztecan|lang=ppl}} ''*paha''. Cognate to Nahuatl ''[[atl]]''.
 
+===Noun===
+{{infl|ppl|noun}}
+#[[water]]
+
+----
 ==Scottish Gaelic==
 
 ===Verb===
