--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -55,6 +55,9 @@
 {{pt-verb|abandon|ar}}
 
 # to [[abandon]]
+#*{{RQ:Harry Potter|5|pt-BR|page=75}}
+#*:Não o perdoou por '''abandonar''' o serviço em vez de seguir você.
+#*::She didn't forgive him for abandoning his service instead of following you.
 
 ====Conjugation====
 {{pt-conj|abandon|ar}}
