--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -78,7 +78,7 @@
 * [[Macedonian]]: {{t-|mk|вотка|f|tr=vótka}}
 {{trans-bottom}}
 
-[[Category:Alcoholic beverages]]
+[[Category:Distilled beverages]]
 [[Category:Polish derivations]]
 [[Category:Russian derivations]]
 
