--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -154,6 +154,7 @@
 * [[Telugu]]: [[దీవి]] (dIvi), [[ద్వీపం]] (''dveepaM'')
 * Thai: {{t-|th|เกาะ|tr=''gòr''}}
 * Turkish: {{t+|tr|ada}}
+* Turkmen: {{t|tk|ada}}
 * Ukrainian: {{t-|uk|острів|m|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[kupa]] {{f}}
 * Urdu: [[ٹاپو]]
