--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -382,7 +382,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 ===Etymology 3===
-{{etyl|enm|en}} {{term|blowen|lang=enm}} from {{etyl|ang|en}} {{term|blowan|blōwan|lang=ang}}
+{{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term|blowan|blōwan|lang=ang}}, from {{proto|Germanic|blōjanan}} (cf. Dutch {{term|bloeien|lang=nl}}, German {{term|blühen|lang=de}}), from {{proto|Indo-European|bhel-}} 'to thrive, bloom' (cf. Latin {{term|florēre|lang=la}} 'to bloom').
 
 ====Verb====
 {{en-verb|blows|blowing|'''[[blew]]'''|'''[[blown]]'''}}
