[[category:sh:Fruits]] <dud#8847750>

--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -59,7 +59,7 @@ From {{etyl|ota|sh}} {{term|طوت|tr=tut, dut|sc=ota-Arab|lang=ota}}, from {{et
 * {{l|sh|murva|mȗrva}}
 
 [[Category:Serbo-Croatian palindromes]]
-
+[[category:sh:Fruits]]
 [[fr:dud]]
 [[it:dud]]
 [[hu:dud]]
