--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -81,7 +81,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Thai: {{Thai|[[ตกเลือด]]}} (dtòk lêuat)
 * Turkish: [[kanamak]] [-ar]
 * {{trreq|Vietnamese}}
-* Welsh: {{t|cy|gwaedu}}
+Welsh: {{t|cy|gwaedu}}
 {{trans-bottom}}
 
 {{trans-top|draw blood}}
