--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -4,6 +4,9 @@
 {{en-noun}}
 
 # Someone or something that [[whistle]]s.
+# A [[bird]] that whistles (applied regionally to various specific species).
+#*{{RQ:Spenser Faerie Queene}}, II.xii:
+#*:The lether-winged Bat, dayes enimy, / The ruefull Strich, still waiting on the bere, / The '''Whistler''' shrill, that who so heares, doth dy [...].
 # A [[whistling marmot]].
 # A [[goldeneye]].
 # {{physics}} An [[audio]]-[[frequency]] [[electromagnetic wave]] produced by [[atmospheric]] [[disturbance]]s such as [[lightning]].
