/* Pronunciation */ add missing opening / to IPA <CD#8862921>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -60,7 +60,7 @@
 {{wikipedia|lang=fr}}
 
 ===Pronunciation===
-* {{IPA|/se.de|lang=fr/|lang=fr}}
+* {{IPA|/se.de/|lang=fr/|lang=fr}}
 * {{audio|Fr-CD.ogg|CD}}
 
 ===Noun===
