Trans gloss-flossx <oscillogram#8867129>

--- a/en/o/oscillogram.719990.wikitext
+++ b/en/o/oscillogram.719990.wikitext
@@ -6,7 +6,7 @@
 # A record produced by an [[oscillograph]] or [[oscilloscope]].
 
 ====Translations====
-{{trans-top}}
+{{trans-top|produced by oscillograph}}
 *Bulgarian: [[осцилограма]] {{f}}
 *Finnish: [[oskillogrammi]]
 {{trans-mid}}
