--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -76,7 +76,7 @@
 * German: {{t+|de|Kaninchen|n}}
 * Greek:
 *: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
-*: Modern: {{t+|el|κουνέλι|n|tr=kounéli}}, {{t|el|κόνικλος|m|tr=kóniklos}}
+*: Modern: {{t+|el|κουνέλι|n|tr=kounéli}}, {{i|obsolete}} {{t|el|κόνικλος|m|tr=kóniklos}}
 * [[Gujarati]]: [[સસલું]] (saslu.n)
 * Hebrew: [[ארנב]] (arnav) {{m}}
 * Hindi: [[ख़रगोश]] (<u>kh</u>argoš) {{m}}, [[ख़रगोशनी]] (<u>kh</u>argošanī) {{f}}
