/* Norwegian */ correct inflection <CD#8871029>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -129,9 +129,16 @@
 ==Norwegian==
 
 ===Initialism===
-{{no-noun-irreg|m|CD'en|CD'er|CD'ene}}
+{{infl|no|initialism|g=m}}
 
 # [[#English|CD]] (disc)
+
+====Inflection====
+{{no-noun-infl|nb-class=m1|nn-class=m1|stem=CD-}}
+
+====References====
+
+* [http://www.språkrådet.no/Sprakhjelp/Rettskriving_Ordboeker/Skriveregler_og_grammatikk/Forbokstavord/ Norwegian Language Council]
 
 ----
 
