t+gd:[[leum]] t-balance t+gd:[[l]] ([[WT:EDIT|Assisted]]) <bound#8878507>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -158,10 +158,11 @@ See [[bind]]
 * Bulgarian: {{t+|bg|скок|m}}
 * Dutch: {{t-|nl|sprong}}
 * Finnish: {{t-|fi|hyppy}}, {{t-|fi|loikka}}
-{{trans-mid}}
 * French: {{t+|fr|bond|f}}, {{t+|fr|saut|m}}
+{{trans-mid}}
 * German: {{t+|de|Sprung|m}}
 * Italian: {{t+|it|salto|m}}, {{t-|it|balzo|m}}
+* [[Scottish Gaelic]]: {{t|gd|leum|m}}
 * Swedish: [[hopp]] {{n}}, [[skutt]] {{n}}
 {{trans-bottom}}
 
@@ -181,6 +182,7 @@ See [[bind]]
 * Finnish: {{t-|fi|hyppiä}}, {{t-|fi|hypähdellä}}
 {{trans-mid}}
 * French: {{t+|fr|bondir}}, {{t+|fr|sauter}}
+* [[Scottish Gaelic]]: {{t|gd|l}}
 * Swedish: [[skutta]]
 {{trans-bottom}}
 
