--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -71,7 +71,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Portuguese: {{t+|pt|sangrar}}
 * Romanian: {{t+|ro|sângera}}
 * Russian: {{t|ru|кровоточить|tr=krovotočít’}}
-* [[Scottish Gaelic]]: {{t-|gd|leig fuil|xs=Scottish Gaelic}}
+* [[Scottish Gaelic]]: {{t-|gd|leig fuil|xs=Scottish Gaelic}},  {{qualifier|nose}} {{t|gd|leum}}
 * Simplified Chinese: {{tø|zh-cn|出血}}
 * Slovene: {{t+|sl|krvaveti}}
 * Spanish: {{t-|es|sangrar}}
