--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -33,6 +33,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * [[bleed white]]
 
 ====Translations====
+{{rfc-tsort|unknown line format: Welsh:  t cy gwaedu }}
 {{trans-top|lose blood}}
 * [[American Sign Language]]: {{tø|ase|4@Nose-PalmBackFingerAcross Wiggle 4@NearNeck-PalmBackFingerAcross|xs=American Sign Language}}
 * Arabic: {{t|ar|نزف|tr=nazafa}}
