--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -33,7 +33,6 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * [[bleed white]]
 
 ====Translations====
-{{rfc-tsort|unknown line format: Welsh:  t cy gwaedu }}
 {{trans-top|lose blood}}
 * [[American Sign Language]]: {{tø|ase|4@Nose-PalmBackFingerAcross Wiggle 4@NearNeck-PalmBackFingerAcross|xs=American Sign Language}}
 * Arabic: {{t|ar|نزف|tr=nazafa}}
@@ -83,7 +82,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Thai: {{Thai|[[ตกเลือด]]}} (dtòk lêuat)
 * Turkish: [[kanamak]] [-ar]
 * {{trreq|Vietnamese}}
-Welsh: {{t|cy|gwaedu}}
+* Welsh: {{t|cy|gwaedu}}
 {{trans-bottom}}
 
 {{trans-top|draw blood}}
