--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -20,7 +20,7 @@
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
 #: ''an [[island]] of tranquility'' (a calm place surrounded by a noisy environment)
 # A [[superstructure]] on a large ship’s [[deck]]
-
+{{rft}}
 ====Synonyms====
 * {{italbrac-colon|an entity surrounded by other very different entities}} [[oasis]]
 
