/* Noun */ modify defn per TR discussion <island#8882906>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -16,9 +16,9 @@
 ===Noun===
 {{en-noun}}
 
-# An [[area]] of [[land]] totally [[surround]]ed by [[water]].
+# A contiguous [[area]] of [[land]], smaller than a [[continent]], totally [[surround]]ed by [[water]].
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
-#: ''an [[island]] of tranquility'' (a calm place surrounded by a noisy environment)
+#: ''an '''island''' of tranquility'' (a calm place surrounded by a noisy environment)
 # A [[superstructure]] on a large ship’s [[deck]]
 {{rft}}
 ====Synonyms====
