--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -45,7 +45,7 @@
 * [[Ainu]]: {{tø|ain|モシㇼ|tr=moshir}}
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
 * [[Amharic]]: {{tø|am|ደሴት|tr=''däset''|sc=Ethi}}
-* Arabic: {{Arab|[[جزيرة|جَزِيرَة]]}} (jazeera) {{f}}
+* Arabic: {{Arab|[[جزيرة|جَزِيرَة]]}} (jazīrah) {{f}}
 * [[Aragonese]]: [[isla]] {{f}}
 * Aramaic:
 *: Syriac: [[ܓܙܪܬܐ]] (''gāzartā’'') {{f}}
