--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -1,6 +1,7 @@
 {{also|Mill}}
 ==English==
 {{wikipedia}}
+
 ===Pronunciation===
 * {{enPR|mĭl}}, {{IPA|/mɪl/}}, {{SAMPA|/mIl/}}
 * {{audio|en-us-mill.ogg|Audio (US)}}
@@ -137,15 +138,15 @@ Ultimately from {{etyl|la}} {{term|millesimum|lang=la}}.
 # An obsolete [[coin]] with value one-thousandth of a [[dollar]], or one-tenth of a [[cent]].
 # One [[thousandth]] part, particularly in [[millage]] rates of property tax.
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|one thousandth part}} [[permille]], [[‰]], [[₥]]
 
-====Coordinate terms====
+=====Coordinate terms=====
 {{sense|one thousandth part}}
 * [[percent]]
 * [[basis point]]
 
-====Derived terms====
+=====Derived terms=====
 * [[millage]]
 
 =====Translations=====
