t+nv:[[yéigo ałhoshii]] t-balance ([[WT:EDIT|Assisted]]) <dormouse#8899294>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -42,12 +42,13 @@ Unknown origin, though came to be associated with French {{term|dormir||to sleep
 * Italian: {{t+|it|ghiro|m}}, {{t+|it|moscardino|m}}
 * [[Ladin]]: [[ghiro]]
 * Latin: [[Myoxus]] [[glis]] (=[[Glis]] [[glis]]) {{m}}, [[Muscardinus]], [[Dryomys]]
-{{trans-mid}}
 * Latvian: [[susuris]], [[susuris]]
+{{trans-mid}}
 * Lithuanian: [[miegapelė]]
 * [[Lower Sorbian]]: [[połsk]]
 * [[Macedonian]]: [[полв]] ([[polv]])
 * Maltese: [[ġurdien ta’ denbu pjuma]]
+* Navajo: {{tø|nv|yéigo ałhoshii}}
 * Norwegian: [[syvsover]], [[sovemus]]
 * [[Occitan]]: [[missara]], [[greule]]
 * Polish: [[popielica]] '' ''
