--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -109,6 +109,7 @@ From {{etyl|la|it}} {{term|mania|lang=la}}.
 
 [[de:mania]]
 [[et:mania]]
+[[el:mania]]
 [[fa:mania]]
 [[fr:mania]]
 [[io:mania]]
