t+yua:[[ka’teen]] ([[WT:EDIT|Assisted]]) <again#8900724>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -120,6 +120,7 @@
 * Welsh: {{t-|cy|eto|xs=Welsh}}
 * [[West Frisian]]: {{t-|fy|wer|xs=West Frisian}}
 * Yiddish: [[ווידער]] (vider), [[נאָכאַמאָל]] (nokhamol)
+* [[Yucatec Maya]]: {{tø|yua|ka’teen}}
 {{trans-bottom}}
 
 {{trans-top|used in a question to ask something one has forgotten}}
