/* Verb */ +sense <break#8919416>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -60,6 +60,8 @@
 #: ''Dawn '''broke''' over the hills.''
 # {{backgammon|transitive}} To [[remove]] one of the two [[man|men]] on (a [[point]]).
 # {{transitive}} To [[interrupt]] (a [[fall]]) by inserting something [[soft]] or [[moveable]] so that the falling object not hit something [[hard]] or [[immoveable]] beneath.
+# {{transitive|of a [[habit]] or predilection}} Cause to no longer exist.
+#: ''I've got to '''break''' this habit I have of biting my nails.''
 
 ====Usage notes====
 The sense relating to a spell of weather is most likely to be used after a period of persistent good or bad weather; it is rarely used to signify the end of changeable conditions.
