generalize a verb sense and add a noun sense <break#8924381>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -60,7 +60,7 @@
 #: ''Morning has '''broken'''.''
 #: ''Dawn '''broke''' over the hills.''
 # {{backgammon|transitive}} To [[remove]] one of the two [[man|men]] on (a [[point]]).
-# {{transitive}} To [[interrupt]] (a [[fall]]) by inserting something [[soft]] or [[moveable]] so that the falling object not hit something [[hard]] or [[immoveable]] beneath.
+# {{transitive}} To [[interrupt]] (a [[fall]]) by inserting something so that the falling object not hit something else beneath.
 # {{transitive|of a [[habit]] or predilection}} Cause to no longer exist.
 #: ''I've got to '''break''' this habit I have of biting my nails.''
 # {{transitive}} {{rfdef}}
@@ -512,6 +512,9 @@ The sense relating to a spell of weather is most likely to be used after a perio
 # {{music}} A short section of music, often between verses, in which some performers stop while others continue.
 #: ''The fiddle '''break''' was amazing, it was a pity the singer came back in on the wrong note.''
 # {{British|weather}} a change; the end of a spell of persistent good or bad weather
+# The [[beginning]] (of the morning).
+#: ''at dawn's '''break'''''
+#: ''at the '''break''' of day''
 
 ====Usage notes====
 * {{sense|music}} The instruments that are named are the ones that carry on playing, for example a '''fiddle break''' implies that the fiddle is the most prominent instrument playing during the break.
@@ -524,7 +527,6 @@ The sense relating to a spell of weather is most likely to be used after a perio
 ====Derived terms====
 {{rel-top3|Terms derived from ''break'' (noun)}}
 * [[beach break]]
-* [[break of day]]
 * [[daybreak]]
 {{rel-mid3}}
 * [[give someone a break]]<!--as in "give me a break!"-->
