added derived terms <durva#8933808>

--- a/en/d/durva.855097.wikitext
+++ b/en/d/durva.855097.wikitext
@@ -12,7 +12,10 @@ Of unknown origin.
 {{hu-adj|comp=durvább}}
 
 # [[coarse]] (of inferior quality)
-# [[brusque]]
+# [[brusque]], [[rough]], [[rude]]
+
+====Derived terms====
+* [[durván]]
 
 [[Category:hu:Unknown etymology]]
 
