--- a/en/h/Hildegard.855804.wikitext
+++ b/en/h/Hildegard.855804.wikitext
@@ -1,4 +1,5 @@
 ==English==
+{{wikipedia|Hildegard of Bingen}}
 
 ===Alternative spellings===
 * [[Hildegarde]]
@@ -8,7 +9,8 @@
 
 # {{given name|female|from=Germanic}} borrowed from German in the 19th century, in occasional use.
 
-{{wikipedia|Hildegard of Bingen}}
+====Related terms====
+* [[Hilda]]
 
 ----
 
