t+fr:[[ami(e) intime]] t-balance t+ja:[[親しい友達]] t+ja:[[親友]] ([[WT:EDIT|Assisted]]) <bosom friend#8951935>

--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -9,8 +9,10 @@
 ====Translations====
 {{trans-top|intimate friend}}
 * Dutch: {{t-|nl|getrouwe|m|f}}
+* French: {{t|fr|ami(e) intime|m|f}}
 * Hungarian: {{t-|hu|kebelbarát}}
 {{trans-mid}}
+* Japanese: {{t|ja|親しい友達|sc=Jpan}},  {{t|ja|親友|sc=Jpan}}
 * Mandarin: [[知己]] (pinyin: [[zhījǐ]])
 * Vietnamese: {{t+|vi|tri kỷ|xs=Vietnamese}}
 {{trans-bottom}}
