t+he:[[שוב]] ([[WT:EDIT|Assisted]]) <again#8961727>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -75,7 +75,7 @@
 * German: {{t+|de|erneut}}, {{t-|de|noch einmal}}, {{t+|de|nochmal}}, {{t+|de|wieder}}
 * Greek: [[ξανά]] (ksana), [[πάλι]] (pali)
 * Hawaiian: [[hou]]
-* Hebrew: [[שוב]] (šuv)
+* Hebrew: [[שוב]] (šuv),  {{t|he|שוב|tr=šuv|sc=Hebr}}
 * Hindi: {{t-|hi|फिर|xs=Hindi}},  {{t|hi|फिर|tr=phir|sc=Deva}}
 * Hungarian: {{t+|hu|újra}}, {{t+|hu|megint}}, {{t+|hu|ismét}}
 * Icelandic: {{t+|is|aftur}}
