/* Etymology */ term\ <greenlight#8963048>

--- a/en/g/greenlight.746549.wikitext
+++ b/en/g/greenlight.746549.wikitext
@@ -4,7 +4,7 @@
 * [[green-light]]
 
 ===Etymology===
-From ''[[green light]]''.
+From {{term|green light}}
 
 ===Verb===
 {{en-verb|greenlights|greenlighting|'''[[greenlit]]''' ''or'' '''[[greenlighted]]'''}}
