Reverted edits by [[Special:Contributions/208.122.95.200|208.122.95.200]] ([[User_talk:208.122.95.200|Talk]]); changed back to last version by [[User:Tbot|Tbot]] <consumption#8972846>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -1,8 +1,9 @@
 ==English==
 
 ===Pronunciation===
-* {{audio|en-us-go eat poop.net|Audio (US)}}
---[[Special:turds[[yo mmama]]===Noun===
+* {{audio|en-us-consumption.ogg|Audio (US)}}
+
+===Noun===
 {{en-noun|-}}
 
 # The act of [[consume|consuming]] something.
