/* Verb */ +sense <break#8979508>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -61,7 +61,11 @@
 #: ''Dawn '''broke''' over the hills.''
 # {{backgammon|transitive}} To [[remove]] one of the two [[man|men]] on (a [[point]]).
 # {{transitive}} To [[interrupt]] (a [[fall]]) by inserting something so that the falling object not hit something else beneath.
-# {{transitive|of a [[habit]] or predilection}} Cause to no longer exist.
+# {{transitive}} To [[disconnect]] (a connection).
+#: ''The referee ordered the boxers to '''break''' the clinch.''
+#: ''The referee '''broke''' the boxers' clinch.''
+#: ''I couldn't hear a thing he was saying, so I '''broke''' the connection and called him back.''
+# {{transitive}} To (a [[habit]]) cause to no longer exist.
 #: ''I've got to '''break''' this habit I have of biting my nails.''
 # {{transitive}} {{rfdef}}
 #: ''Her child's death '''broke''' her.''
