/* German */ conjugation template <bitten#8999388>

--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -33,9 +33,12 @@
 * {{audio|De-at-bitten.ogg|audio (Austria)}}
 
 ===Verb===
-{{de-verb-strong|bittet|bat|gebeten}}
+{{de-verb}}
 
 # {{transitive|or|intransitive}} To [[ask]]; to [[beg]]; to [[plead]]; to [[request]].
+
+====Conjugation====
+{{de-conj-strong|bitt|bat|gebeten|h|e||bät|a}}
 
 ----
 
