trans link [[Catalan]] <marten#9001738>

--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -36,7 +36,7 @@
 * Bosnian: {{t-|bs|kuna|f}}
 * [[Breton]]: [[mart]]
 * Bulgarian: {{t-|bg|бялка|f|tr=bjalka}}
-* Catalan: {{t-|ca|marta|f}}
+* [[Catalan]]: {{t-|ca|marta|f}}
 * Croatian: {{t-|hr|kuna|f}}
 * Czech: {{t-|cs|kuna|f}}
 * Danish: [[mår]]
