/* Verb */ +sense <break#9002094>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -74,7 +74,9 @@
 # {{transitive}} To surpass or do better than (a specific number).
 #: ''I can't believe she '''broke''' 3 under par!''
 #: ''The policeman '''broke''' sixty on a residential street in his hurry to catch the thief.''
-
+# {{intransitive|of an [[emulsion]]}} To [[demulsify]].
+====Quotations====
+{{seeCites}}
 ====Usage notes====
 The sense relating to a spell of weather is most likely to be used after a period of persistent good or bad weather; it is rarely used to signify the end of changeable conditions.
 
